--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -1,10 +1,10 @@
+@import './var.scss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import './var.scss';
-
 html, body, #root {
+  @apply h-screen;
   margin: 0;
   background-color: $color-textCover;
 }
@@ -12,6 +12,11 @@ html, body, #root {
 html{
   font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   tab-size: 4;
+}
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 [class^="ico-"],
