--- a/apps/front/src/styles/DocView.scss
+++ b/apps/front/src/styles/DocView.scss
@@ -1,8 +1,21 @@
+@import "../var.scss";
+
 .docContainer {
     @apply flex grow h-full absolute top-0 w-full pt-16;
     flex: 1 0 auto;
 }
 
 .docContent {
-    @apply grow overflow-y-scroll p-2 h-full;
+    @apply grow overflow-y-scroll h-full;
+}
+
+.docFooter {
+    @apply flex justify-center items-center h-16 w-full hidden;
+    background-color: $color-bgCover;
+    color: $color-textCover;
+}
+
+.docRealContent{
+    @apply p-2 ;
+
 }
