feat: WIP tailwind 4

--- a/apps/front/src/styles.css
+++ b/apps/front/src/styles.css
@@ -4,6 +4,8 @@
 @import './styles/DocView.css';
 @import './styles/NavBar.css';
 @import './styles/Hero.css';
+@import './styles/BlogView.css';
+@import './styles/DocSidebar.css';
 
 html,
 body,
