feat: Rework Page

--- a/apps/front/src/styles.css
+++ b/apps/front/src/styles.css
@@ -6,6 +6,7 @@
 @import './styles/Hero.css';
 @import './styles/BlogView.css';
 @import './styles/DocSidebar.css';
+@import './styles/Page.css';
 
 html,
 body,
