feat: add QuickNavBar for PageRenderV2

--- a/apps/front/src/styles/Page.css
+++ b/apps/front/src/styles/Page.css
@@ -2,3 +2,4 @@
 @import './Page/PageRender.css';
 @import './Page/PageMetadata.css';
 @import './Page/PageContent.css';
+@import './Page/PageQuickNav.css';
