--- a/apps/front/src/varV2.css
+++ b/apps/front/src/varV2.css
@@ -1,2 +1,7 @@
 :root {
+  --color-dark-red: #221111;
+  --color-light-red: #673234;
+  --color-pink: #ca9194;
+  --color-dark-light-red: #482325;
+  --color-dark-darker-red: #34191a;
 }
