--- a/apps/front/src/stylesV2/index.css
+++ b/apps/front/src/stylesV2/index.css
@@ -1,3 +1,5 @@
+@import './milestonesModal.css';
+
 body {
   @apply bg-[var(--color-dark-red)] text-white m-0 p-0;
   font-family: 'Space Grotesk', 'Noto Sans', sans-serif;
